# idahost

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp  resource.rc  wmain.cpp
idahost/: CMakeLists.txt  Config.cmake.in  idahost.cpp  pe_mapper.hpp  win_utils.hpp
idahost/include/: idahost.h  idahost_interface.h
idahost_plugin/: CMakeLists.txt  plugin.cpp  prep-cmake.bat
